--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Departments#index</h1>
-<p>Find me in app/views/departments/index.html.erb</p>
+<h1>Departments</h1>
+<%= link_to 'Create department', new_department_path %>
+<ul>
+  <% @departments.each do |department| %>
+    <li><%= link_to department.name, department_path(department.id) %></li>
+  <% end %>
+</ul>
